fixed white space around body by cganging backgrouyd color to same color of main id background color

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,9 @@
     margin: auto;
 
 }
+body {
+  background: #E6E6E6;
+}
 #title {
     font-size: 110px;
     text-align: center;
